--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,5 +4,6 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-clap = "4.5.48"
-identity-core = { workspace = true }
+clap = { version = "4.5.48", features = ["derive"] }
+tokio = { workspace = true }
+identity-core = { workspace = true, features = ["server"] }
