--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -2,3 +2,37 @@
 name = "identity-core"
 version.workspace = true
 edition.workspace = true
+
+[dependencies]
+argon2 = { version = "0.5.3", optional = true }
+chrono = { version = "0.4.42", features = ["serde"], optional = true }
+serde = { version = "1.0.228", features = ["derive"] }
+regex = { version = "1.11.3", optional = true }
+rust_iso3166 = { workspace = true, optional = true }
+sqlx = { version = "0.8.6", features = [
+    "chrono",
+    "postgres",
+    "runtime-tokio",
+    "uuid",
+], optional = true }
+tokio = { workspace = true, optional = true }
+uuid = { version = "1.18.1", optional = true }
+validator = "0.20.0"
+sdk = { workspace = true }
+
+[dev-dependencies]
+fake = { version = "4.4.0", features = ["chrono"] }
+rand = "0.9.2"
+
+[features]
+server = [
+    "dep:argon2",
+    "dep:chrono",
+    "dep:regex",
+    "dep:rust_iso3166",
+    "dep:sqlx",
+    "dep:tokio",
+    "dep:uuid",
+    "validator/derive",
+    "sdk/server",
+]
