--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,17 +13,20 @@ chrono = "0.4.42"
 axum = { version = "0.8.6", optional = true }
 dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
 rust_iso3166 = { workspace = true }
+serde = { workspace = true }
+serde_json = "1.0.145"
 tokio = { workspace = true, optional = true }
+uuid = { workspace = true }
 identity-core = { workspace = true }
-sdk = { workspace = true, features = ["dioxus", "fullstack"] }
+sdk = { workspace = true, features = ["dioxus-fullstack"] }
 
 [features]
 default = ["web"]
-web = ["dioxus/web", "sdk/web"]
+web = ["dioxus/web", "sdk/dioxus-web"]
 server = [
     "dep:axum",
     "dep:tokio",
     "identity-core/server",
     "dioxus/server",
-    "sdk/server",
+    "sdk/dioxus-server",
 ]
