--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,11 +4,13 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+apalis = { workspace = true, optional = true }
+apalis-redis = { workspace = true, optional = true }
 argon2 = { version = "0.5.3", optional = true }
 chrono = { version = "0.4.42", features = ["serde"], optional = true }
-serde = { version = "1.0.228", features = ["derive"] }
 regex = { version = "1.11.3", optional = true }
 rust_iso3166 = { workspace = true, optional = true }
+serde = { workspace = true }
 sqlx = { version = "0.8.6", features = [
     "chrono",
     "postgres",
@@ -16,7 +18,7 @@ sqlx = { version = "0.8.6", features = [
     "uuid",
 ], optional = true }
 tokio = { workspace = true, optional = true }
-uuid = { version = "1.18.1", optional = true }
+uuid = { workspace = true }
 validator = "0.20.0"
 sdk = { workspace = true }
 
@@ -26,13 +28,14 @@ rand = "0.9.2"
 
 [features]
 server = [
+    "dep:apalis",
+    "dep:apalis-redis",
     "dep:argon2",
     "dep:chrono",
     "dep:regex",
     "dep:rust_iso3166",
     "dep:sqlx",
     "dep:tokio",
-    "dep:uuid",
     "validator/derive",
     "sdk/server",
 ]
