--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,13 +6,14 @@ on:
 env:
     CARGO_TERM_COLOR: always
     DATABASE_URL: postgres://mango3:mango3@127.0.0.1:5432/identity_test
+    MONITOR_REDIS_URL: redis://127.0.0.1:6379/10
 
 jobs:
     unit_tests:
         runs-on: ubuntu-24.04
         services:
             postgres:
-                image: postgres:17-alpine
+                image: postgres:18-alpine
                 env:
                     POSTGRES_USER: mango3
                     POSTGRES_PASSWORD: mango3
@@ -20,6 +21,11 @@ jobs:
                 ports:
                     - 5432:5432
                 options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+            redis:
+                image: redis:8-alpine
+                options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
+                ports:
+                    - 6379:6379
         steps:
             - uses: actions/checkout@v5
             - uses: taiki-e/install-action@nextest
@@ -31,7 +37,7 @@ jobs:
         runs-on: ubuntu-24.04
         services:
             postgres:
-                image: postgres:17-alpine
+                image: postgres:18-alpine
                 env:
                     POSTGRES_USER: mango3
                     POSTGRES_PASSWORD: mango3
@@ -39,6 +45,11 @@ jobs:
                 ports:
                     - 5432:5432
                 options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+            redis:
+                image: redis:8-alpine
+                options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
+                ports:
+                    - 6379:6379
         steps:
             - uses: actions/checkout@v5
             - uses: ./.github/actions/setup-dioxus
