add login and logout (#4)

--- a/.github/workflows/analysis.yaml
+++ b/.github/workflows/analysis.yaml
@@ -25,9 +25,11 @@ jobs:
             - uses: ./.github/actions/setup-dioxus
             - name: Check with cargo-clippy
               run: |
-                  cargo clippy --package identity-core -- -D warnings
+                  cargo clippy --package identity-core --all-features -- -D warnings
                   cargo clippy --package identity-app -- -D warnings
+                  cargo clippy --package identity-app --no-default-features --features server -- -D warnings
                   cargo clippy --package identity-cli -- -D warnings
+                  cargo clippy --package identity-monitor -- -D warnings
             - name: Check with cargo-fmt
               run: cargo fmt --all --check
             - name: Check with dioxus-cli
