--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,15 +7,23 @@ homepage.workspace = true
 repository.workspace = true
 
 [build-dependencies]
+sdk = { workspace = true, features = ["build"] }
 chrono = "0.4.42"
 
 [dependencies]
 axum = { version = "0.8.6", optional = true }
+axum-extra = { version = "0.10.3", features = [
+    "typed-header",
+], optional = true }
+chrono = { workspace = true, optional = true }
 dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
+futures = { version = "0.3.31", optional = true }
+headers = { version = "0.4.1", optional = true }
 rust_iso3166 = { workspace = true }
 serde = { workspace = true }
 serde_json = "1.0.145"
 tokio = { workspace = true, optional = true }
+url = "2.5.7"
 uuid = { workspace = true }
 identity-core = { workspace = true }
 sdk = { workspace = true, features = ["dioxus-fullstack"] }
@@ -25,6 +33,10 @@ default = ["web"]
 web = ["dioxus/web", "sdk/dioxus-web"]
 server = [
     "dep:axum",
+    "dep:axum-extra",
+    "dep:chrono",
+    "dep:futures",
+    "dep:headers",
     "dep:tokio",
     "identity-core/server",
     "dioxus/server",
