--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 apalis = { workspace = true, optional = true }
 apalis-redis = { workspace = true, optional = true }
 argon2 = { version = "0.5.3", optional = true }
-chrono = { version = "0.4.42", features = ["serde"], optional = true }
+chrono = { workspace = true, optional = true }
 regex = { version = "1.11.3", optional = true }
 rust_iso3166 = { workspace = true, optional = true }
 serde = { workspace = true }
@@ -24,8 +24,7 @@ validator = "0.20.0"
 sdk = { workspace = true }
 
 [dev-dependencies]
-fake = { version = "4.4.0", features = ["chrono"] }
-rand = "0.9.2"
+sdk = { workspace = true, features = ["test-utils"] }
 
 [features]
 server = [
