--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,34 +11,26 @@ sdk = { workspace = true, features = ["build"] }
 chrono = "0.4.42"
 
 [dependencies]
-axum = { version = "0.8.6", optional = true }
-axum-extra = { version = "0.10.3", features = [
-    "typed-header",
-], optional = true }
+axum = { workspace = true, optional = true }
 chrono = { workspace = true, optional = true }
-dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
-futures = { version = "0.3.31", optional = true }
-headers = { version = "0.4.1", optional = true }
+dioxus = { version = "0.7.0-rc.2", features = ["fullstack", "router"] }
 rust_iso3166 = { workspace = true }
 serde = { workspace = true }
-serde_json = "1.0.145"
+serde_json = { workspace = true }
 tokio = { workspace = true, optional = true }
 url = "2.5.7"
 uuid = { workspace = true }
-identity-core = { workspace = true }
-sdk = { workspace = true, features = ["dioxus-fullstack"] }
+identity-core = { workspace = true, optional = true }
+sdk = { workspace = true, features = ["app"] }
 
 [features]
 default = ["web"]
-web = ["dioxus/web", "sdk/dioxus-web"]
+web = ["dioxus/web", "sdk/web"]
 server = [
     "dep:axum",
-    "dep:axum-extra",
     "dep:chrono",
-    "dep:futures",
-    "dep:headers",
     "dep:tokio",
-    "identity-core/server",
+    "dep:identity-core",
     "dioxus/server",
-    "sdk/dioxus-server",
+    "sdk/server",
 ]
