--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,4 +7,4 @@ edition.workspace = true
 clap = { version = "4.5.48", features = ["derive"] }
 tokio = { workspace = true }
 uuid = { workspace = true }
-identity-core = { workspace = true, features = ["server"] }
+identity-core = { workspace = true }
