--- a/monitor/Cargo.toml
+++ b/monitor/Cargo.toml
@@ -9,8 +9,8 @@ lettre = { version = "0.11.19", features = [
     "smtp-transport",
     "tokio1-native-tls",
 ] }
-reqwest = { version = "0.12.23", features = ["json"] }
+reqwest = { version = "0.12.24", features = ["json"] }
 serde = { workspace = true }
 tokio = { workspace = true, features = ["signal"] }
 tracing = "0.1.41"
-identity-core = { workspace = true, features = ["server"] }
+identity-core = { workspace = true }
