--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -14,6 +14,9 @@ headers = "0.4.1"
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
+tower-http = { version = "0.6.6", features = ["trace"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
 uuid = { workspace = true }
 
 identity-core = { workspace = true }
