--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,7 +13,12 @@ chrono = "0.4.42"
 [dependencies]
 axum = { workspace = true, optional = true }
 chrono = { workspace = true, optional = true }
-dioxus = { version = "0.7.0-rc.3", features = ["fullstack", "router"] }
+dioxus = { git = "https://github.com/javierEd/dioxus.git", rev = "223c320", features = [
+    "fullstack",
+    "router",
+] }
+headers = { version = "0.4.1", optional = true }
+http = "1.3.1"
 rust_iso3166 = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -29,6 +34,7 @@ web = ["dioxus/web", "sdk/web"]
 server = [
     "dep:axum",
     "dep:chrono",
+    "dep:headers",
     "dep:tokio",
     "dep:identity-core",
     "dioxus/server",
