--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,10 +13,7 @@ chrono = "0.4.42"
 [dependencies]
 axum = { workspace = true, optional = true }
 chrono = { workspace = true, optional = true }
-dioxus = { git = "https://github.com/javierEd/dioxus.git", rev = "6eeaa02", features = [
-    "fullstack",
-    "router",
-] }
+dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
 headers = { version = "0.4.1", optional = true }
 http = "1.3.1"
 rust_iso3166 = { workspace = true }
