--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -12,7 +12,7 @@ chrono = "0.4.42"
 
 [dependencies]
 axum = { workspace = true, optional = true }
-chrono = { workspace = true, optional = true }
+chrono = { workspace = true }
 dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
 headers = { version = "0.4.1", optional = true }
 http = "1.3.1"
@@ -30,7 +30,6 @@ default = ["web"]
 web = ["dioxus/web", "sdk/web"]
 server = [
     "dep:axum",
-    "dep:chrono",
     "dep:headers",
     "dep:tokio",
     "dep:identity-core",
