--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ chrono = { version = "0.4.42", features = ["serde"] }
 rust_iso3166 = "0.1.14"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+sqlx = "0.8.6"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.18.1", features = ["serde"] }
 identity-core = { path = "core" }
