--- a/monitor/Cargo.toml
+++ b/monitor/Cargo.toml
@@ -11,6 +11,7 @@ lettre = { version = "0.11.19", features = [
 ] }
 reqwest = { version = "0.12.24", features = ["json"] }
 serde = { workspace = true }
+sqlx = { workspace = true }
 tokio = { workspace = true, features = ["signal"] }
 tracing = "0.1.41"
 identity-core = { workspace = true }
