Add webhook support for applications
- Add webhook_url and webhook_secret to Application model and DB migration
- Implement application and authorization commands (insert/update/delete/revoke)
- Enqueue webhook events from monitor on authorization revocation; add hmac/sha2/base64/serde_json deps
- Update API/CLI: add revoke endpoint, change refresh to PUT, add webhook_url flag
- Bump sdk tag and add release profile optimizations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,12 @@ sqlx = "0.8.6"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.19.0", features = ["serde"] }
 identity-core = { path = "core" }
-sdk = { git = "https://github.com/mangocubed/sdk.git", tag = "v0.0.0-alpha.21" }
+sdk = { git = "https://github.com/mangocubed/sdk.git", tag = "v0.0.0-alpha.23" }
+
+[profile.release]
+opt-level = "z"
+debug = false
+lto = true
+codegen-units = 1
+panic = "abort"
+incremental = false
