--- a/.github/workflows/analysis.yaml
+++ b/.github/workflows/analysis.yaml
@@ -28,6 +28,7 @@ jobs:
                   cargo clippy --package identity-core --all-features -- -D warnings
                   cargo clippy --package identity-app -- -D warnings
                   cargo clippy --package identity-app --no-default-features --features server -- -D warnings
+                  cargo clippy --package identity-api -- -D warnings || failed
                   cargo clippy --package identity-cli -- -D warnings
                   cargo clippy --package identity-monitor -- -D warnings
             - name: Check with cargo-fmt
