--- a/monitor/Cargo.toml
+++ b/monitor/Cargo.toml
@@ -5,12 +5,16 @@ edition.workspace = true
 
 [dependencies]
 apalis = { workspace = true }
+base64 = "0.22.1"
+hmac = "0.12.1"
 lettre = { version = "0.11.19", features = [
     "smtp-transport",
     "tokio1-native-tls",
 ] }
 reqwest = { version = "0.12.26", features = ["json"] }
 serde = { workspace = true }
+serde_json = { workspace = true }
+sha2 = "0.10.9"
 sqlx = { workspace = true }
 tokio = { workspace = true, features = ["signal"] }
 tracing = "0.1.44"
