--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -2,24 +2,10 @@
 name = "Mango³ ID"
 
 [web.app]
-
-# HTML title tag content
 title = "Mango³ ID"
 
-# include `assets` in web platform
-[web.resource]
-
-# Additional CSS style files
-style = []
-
-# Additional JavaScript files
-script = []
-
-[web.resource.dev]
-
-# Javascript code file
-# serve: [dev-server] only
-script = []
+[web.watcher]
+reload_html = true
 
 [bundle]
 identifier = "app.mango3.id"
